@@ -8,7 +8,7 @@ import com.example.datnsd26.models.SanPhamChiTiet;
 import com.example.datnsd26.repository.SanPhamChiTietRepository;
 import com.example.datnsd26.repository.SanPhamRepositoty;
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.Sort;
+import org.springframework.data.domain.*;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
@@ -21,9 +21,12 @@ public class PublicSanPhamService {
     private final SanPhamRepositoty sanPhamRepository;
     private final SanPhamChiTietRepository sanPhamChiTietRepository;
 
-    public List<PublicSanPhamResponse> getAllProducts() {
+    public Page<PublicSanPhamResponse> getAllProducts(Pageable pageable) {
+        // Lấy tất cả sản phẩm
         List<SanPham> sanPhamList = sanPhamRepository.findAll();
-        return sanPhamList.stream().map(sanPham -> {
+
+        // Chuyển đổi danh sách sản phẩm thành danh sách PublicSanPhamResponse
+        List<PublicSanPhamResponse> responseList = sanPhamList.stream().map(sanPham -> {
             // Lấy danh sách tất cả biến thể của sản phẩm
             List<SanPhamChiTiet> danhSachBienThe = sanPhamChiTietRepository.findBySanPham(sanPham);
 
@@ -31,43 +34,71 @@ public class PublicSanPhamService {
                 return null; // Nếu không có biến thể, bỏ qua sản phẩm này
             }
 
-            // Lọc danh sách biến thể để lấy biến thể có trạng thái là true
-            SanPhamChiTiet bienTheDuocChon = danhSachBienThe.stream()
+            // Lọc danh sách biến thể để lấy các biến thể có trạng thái là true
+            List<SanPhamChiTiet> bienTheDuocChonList = danhSachBienThe.stream()
                     .filter(SanPhamChiTiet::getTrangThai) // Giữ lại các biến thể có trạng thái true
-                    .findFirst() // Lấy biến thể đầu tiên thỏa mãn
-                    .orElse(null); // Trả về null nếu không có biến thể nào thỏa mãn
+                    .collect(Collectors.toList()); // Thu thập vào danh sách
 
-            if (bienTheDuocChon == null) {
+            if (bienTheDuocChonList.isEmpty()) {
                 return null; // Nếu không có biến thể nào có trạng thái true, bỏ qua sản phẩm này
             }
-// Lấy tên thương hiệu từ biến thể
-            String tenThuongHieu = bienTheDuocChon.getThuongHieu() != null
-                    ? bienTheDuocChon.getThuongHieu().getTen()
+
+            // Lấy tên thương hiệu từ biến thể
+            String tenThuongHieu = bienTheDuocChonList.get(0).getThuongHieu() != null
+                    ? bienTheDuocChonList.get(0).getThuongHieu().getTen()
                     : "Không rõ";
+
+            // Lấy danh sách màu sắc của tất cả biến thể
+            List<String> danhSachMauSac = bienTheDuocChonList.stream()
+                    .map(bienThe -> bienThe.getMauSac() != null ? bienThe.getMauSac().getTen() : "#000000")
+                    .distinct() // Lọc các màu sắc trùng lặp
+                    .collect(Collectors.toList());
             return PublicSanPhamResponse.builder()
                     .id(sanPham.getId())
                     .tenSanPham(sanPham.getTenSanPham())
-                    .hinhAnh(bienTheDuocChon.getHinhAnh().stream().findFirst()
+                    .hinhAnh(bienTheDuocChonList.get(0).getHinhAnh().stream().findFirst()
                             .map(HinhAnh::getTenAnh)
                             .orElse("default.jpg")) // Lấy ảnh đầu tiên
-                    .giaBan(bienTheDuocChon.getGiaBan()) // Lấy giá từ biến thể
-                    .giaBanSauGiam(bienTheDuocChon.getGiaBanSauGiam())
-                    .idSanPhamChiTiet(bienTheDuocChon.getId()) // ✅ Lưu ID biến thể sản phẩm
+                    .giaBan(bienTheDuocChonList.get(0).getGiaBan()) // Lấy giá từ biến thể
+                    .giaBanSauGiam(bienTheDuocChonList.get(0).getGiaBanSauGiam())
+                    .idSanPhamChiTiet(bienTheDuocChonList.get(0).getId()) // Lưu ID biến thể sản phẩm
                     .thuongHieu(tenThuongHieu)
+                    .mauSac(danhSachMauSac) // Lưu danh sách màu sắc của sản phẩm
                     .build();
-        }).filter(Objects::nonNull).toList();
+        }).filter(Objects::nonNull).collect(Collectors.toList());
+
+        // Tính toán start và end dựa trên pageable
+        int start = pageable.getPageNumber() * pageable.getPageSize();
+        int end = Math.min(start + pageable.getPageSize(), responseList.size());
+
+        // Đảm bảo start và end nằm trong phạm vi hợp lệ
+        if (start >= responseList.size()) {
+            start = responseList.size() - pageable.getPageSize(); // Điều chỉnh khi start vượt quá số lượng mục
+            end = responseList.size();
+        }
+
+        List<PublicSanPhamResponse> pagedList = responseList.subList(start, end);
+
+        // Tạo PageImpl cho phân trang
+        Page<PublicSanPhamResponse> pagedResult = new PageImpl<>(pagedList, pageable, responseList.size());
+
+
+        return pagedResult;
     }
 
 
-    public List<PublicSanPhamResponse> filterProducts(
+    public Page<PublicSanPhamResponse> filterProducts(
             List<Long> thuongHieuIds,
             List<Long> chatLieuIds,
             List<Long> deGiayIds,
             List<Long> kichCoIds,
             List<Long> mauSacIds,
-            String sortOrder
+            String sortOrder,
+            Pageable pageable
     ) {
-        // Gọi repository
+
+
+        // Gọi repository để lấy danh sách SanPhamChiTiet sau khi lọc
         List<SanPhamChiTiet> result = sanPhamChiTietRepository.filterSanPham(
                 thuongHieuIds == null || thuongHieuIds.isEmpty() ? null : thuongHieuIds,
                 chatLieuIds == null || chatLieuIds.isEmpty() ? null : chatLieuIds,
@@ -76,7 +107,7 @@ public class PublicSanPhamService {
                 mauSacIds == null || mauSacIds.isEmpty() ? null : mauSacIds,
                 true
         );
-
+//        List<SanPhamChiTiet> result = resultPage.getContent();
         // Group theo sản phẩm (mỗi sản phẩm chỉ hiển thị 1 dòng - giá thấp nhất)
         Map<Long, SanPhamChiTiet> uniqueBySanPham = new LinkedHashMap<>();
         for (SanPhamChiTiet spct : result) {
@@ -100,21 +131,54 @@ public class PublicSanPhamService {
             finalList.sort(Comparator.comparing((SanPhamChiTiet spct) -> spct.getSanPham().getTenSanPham(), Comparator.nullsLast(String::compareToIgnoreCase)).reversed());
         }
 
-        // Map sang DTO
-        return finalList.stream().map(spct -> PublicSanPhamResponse.builder()
-                .id(spct.getSanPham().getId())
-                .tenSanPham(spct.getSanPham().getTenSanPham())
-                .giaBan(spct.getGiaBan())
-                .giaBanSauGiam(spct.getGiaBanSauGiam())
-                .idSanPhamChiTiet(spct.getId())
-                .hinhAnh(spct.getSanPham().getSpct().stream()
-                        .flatMap(ct -> ct.getHinhAnh().stream())
-                        .findFirst()
-                        .map(HinhAnh::getTenAnh)
-                        .orElse(null))
-                .thuongHieu(spct.getThuongHieu().getTen())
-                .build()
-        ).collect(Collectors.toList());
+        // Chuyển đổi thành PublicSanPhamResponse và thêm màu sắc
+        List<PublicSanPhamResponse> responseList = finalList.stream().map(spct -> {
+            // Lấy danh sách màu sắc của sản phẩm
+            List<String> danhSachMauSac = spct.getSanPham().getSpct().stream()
+                    .map(bienThe -> bienThe.getMauSac() != null ? bienThe.getMauSac().getTen() : "Không xác định")
+                    .distinct()
+                    .collect(Collectors.toList());
+            System.out.println("Màu sắc: " + danhSachMauSac);
+            // Xây dựng PublicSanPhamResponse với màu sắc
+            return PublicSanPhamResponse.builder()
+                    .id(spct.getSanPham().getId())
+                    .tenSanPham(spct.getSanPham().getTenSanPham())
+                    .giaBan(spct.getGiaBan())
+                    .giaBanSauGiam(spct.getGiaBanSauGiam())
+                    .idSanPhamChiTiet(spct.getId())
+                    .hinhAnh(spct.getSanPham().getSpct().stream()
+                            .flatMap(ct -> ct.getHinhAnh().stream())
+                            .findFirst()
+                            .map(HinhAnh::getTenAnh)
+                            .orElse(null))
+                    .thuongHieu(spct.getThuongHieu().getTen())
+                    .mauSac(danhSachMauSac) // Thêm danh sách màu sắc
+                    .build();
+        }).collect(Collectors.toList());
+
+        // Tính toán start và end dựa trên pageable
+        int start = pageable.getPageNumber() * pageable.getPageSize();
+        int end = Math.min(start + pageable.getPageSize(), responseList.size());
+
+        // Đảm bảo start và end nằm trong phạm vi hợp lệ
+        if (start >= responseList.size()) {
+            start = responseList.size() - pageable.getPageSize(); // Điều chỉnh khi start vượt quá số lượng mục
+            end = responseList.size();
+        }
+
+        List<PublicSanPhamResponse> pagedList = responseList.subList(start, end);
+
+        // Tạo PageImpl cho phân trang
+        Page<PublicSanPhamResponse> pagedResult = new PageImpl<>(pagedList, pageable, responseList.size());
+
+        // In ra danh sách sau khi phân trang
+        System.out.println("Danh sách sản phẩm sau khi phân trang:");
+        pagedList.forEach(product -> {
+            System.out.println("Tên sản phẩm: " + product.getTenSanPham() + ", Giá bán: " + product.getGiaBan());
+        });
+
+        return pagedResult;
+
     }
 
 
@@ -138,50 +202,56 @@ public class PublicSanPhamService {
         return sanPhamChiTietRepository.findAllSortedByPriceDesc();
     }
 
-    public List<PublicSanPhamResponse> searchProducts(String keyword) {
-        List<SanPham> results = Optional.ofNullable(
-                sanPhamRepository.searchByTenOrMa(keyword.toLowerCase())
-        ).orElse(Collections.emptyList());
+    public Page<PublicSanPhamResponse> searchProducts(String keyword, Pageable pageable) {
 
-        return results.stream()
-                .map(sp -> {
-                    SanPhamChiTiet spct = null;
+        // Tìm kiếm sản phẩm theo tên hoặc mã với phân trang
+        Page<SanPham> results = sanPhamRepository.searchByTenOrMa(keyword.toLowerCase(), pageable);
 
-                    if (sp.getSpct() != null && !sp.getSpct().isEmpty()) {
-                        spct = sp.getSpct().get(0);
+        return results.map(sp -> {
+            SanPhamChiTiet spct = null;
 
-                        System.out.println(">>> SAN PHAM: " + sp.getTenSanPham());
-                        System.out.println(">>> GIA BAN: " + spct.getGiaBan() + ", GIA SAU GIAM: " + spct.getGiaBanSauGiam());
-                    } else {
-                        System.out.println(">>> SAN PHAM KHONG CO CHI TIET: " + sp.getTenSanPham());
-                    }
-                    Float giaBan = spct != null ? spct.getGiaBan() : null;
-                    Float giaBanSauGiam = spct != null ? spct.getGiaBanSauGiam() : null;
-                    Integer idSpct = spct != null ? spct.getId() : null;
+            if (sp.getSpct() != null && !sp.getSpct().isEmpty()) {
+                spct = sp.getSpct().get(0);
 
-                    String tenAnh = null;
-                    if (spct != null && spct.getHinhAnh() != null && !spct.getHinhAnh().isEmpty()) {
-                        String rawTenAnh = spct.getHinhAnh().get(0).getTenAnh();
-                        tenAnh = rawTenAnh;
-                    }
+                System.out.println(">>> SAN PHAM: " + sp.getTenSanPham());
+                System.out.println(">>> GIA BAN: " + spct.getGiaBan() + ", GIA SAU GIAM: " + spct.getGiaBanSauGiam());
+            } else {
+                System.out.println(">>> SAN PHAM KHONG CO CHI TIET: " + sp.getTenSanPham());
+            }
 
-                    // ✅ Lấy tên thương hiệu nếu có
-                    String tenThuongHieu = (spct != null && spct.getThuongHieu() != null)
-                            ? spct.getThuongHieu().getTen()
-                            : "Không rõ";
-                    return PublicSanPhamResponse.builder()
-                            .id(sp.getId())
-                            .tenSanPham(sp.getTenSanPham())
-                            .giaBan(giaBan)
-                            .giaBanSauGiam(giaBanSauGiam)
-                            .idSanPhamChiTiet(idSpct)
-                            .hinhAnh(tenAnh)
-                            .thuongHieu(tenThuongHieu)
-                            .build();
+            Float giaBan = spct != null ? spct.getGiaBan() : null;
+            Float giaBanSauGiam = spct != null ? spct.getGiaBanSauGiam() : null;
+            Integer idSpct = spct != null ? spct.getId() : null;
 
-                })
-                .collect(Collectors.toList());
+            String tenAnh = null;
+            if (spct != null && spct.getHinhAnh() != null && !spct.getHinhAnh().isEmpty()) {
+                String rawTenAnh = spct.getHinhAnh().get(0).getTenAnh();
+                tenAnh = rawTenAnh;
+            }
 
+            // ✅ Lấy tên thương hiệu nếu có
+            String tenThuongHieu = (spct != null && spct.getThuongHieu() != null)
+                    ? spct.getThuongHieu().getTen()
+                    : "Không rõ";
+
+            // ✅ Lấy danh sách màu sắc của sản phẩm
+            List<String> danhSachMauSac = spct.getSanPham().getSpct().stream()
+                    .map(bienThe -> bienThe.getMauSac() != null ? bienThe.getMauSac().getTen() : "Không xác định")
+                    .distinct()
+                    .collect(Collectors.toList());
+            System.out.println("Màu sắc: " + danhSachMauSac);
+
+            return PublicSanPhamResponse.builder()
+                    .id(sp.getId())
+                    .tenSanPham(sp.getTenSanPham())
+                    .giaBan(giaBan)
+                    .giaBanSauGiam(giaBanSauGiam)
+                    .idSanPhamChiTiet(idSpct)
+                    .hinhAnh(tenAnh)
+                    .thuongHieu(tenThuongHieu)
+                    .mauSac(danhSachMauSac)
+                    .build();
+        });
     }
 
 
